--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.11.1"
+  },
   "scripts": {
-    "start":"node ./src/index.js",
+    "start": "serve ./src",
     "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
@@ -15,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
