--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.19",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
